--- a/backend/env.example
+++ b/backend/env.example
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://<your-username>:<your-password>@cluster.mongodb.net/tax_dashboard
 PORT=5000
 NODE_ENV=development
+JWT_SECRET=replace_with_strong_secret
